--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,111 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  font-family: var(--font-noto-sans-jp);
+  color: black;
+  line-height: 1.5;
 }
-
-a {
-  color: inherit;
+header {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 1000;
+}
+header a {
+  color: white;
   text-decoration: none;
+  margin-left: 10px;
+}
+main {
+  max-width: 1280px;
+  margin: 0 auto;
+  width: 100%;
+  padding: 100px 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+
+.container {
+  max-width: 1280px;
+  width: 90%;
+  margin: 0 auto;
+}
+.container h1 {
+  text-align: center;
+  font-size: 32px;
+  margin-bottom: 40px;
+}
+.blog-list {
+  max-width: 1280px;
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 40px 36px;
+}
+.blog-list-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-width: 360px;
+  width: 100%;
+  text-decoration: none;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: box-shadow .4s ease, transform .4s ease;
+}
+.blog-list-item:hover {
+  box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, .2);
+  transform: translateY(-3px);
+}
+.blog-list-item-img {
+  width: 100%;
+  height: 170px;
+}
+.blog-list-item-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.blog-list-item-content {
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.blog-list-item h2 {
+  font-size: 18px;
+  margin-bottom: 5px;
+  width: 100%;
+
+}
+.blog-list-item p {
+  white-space: break-spaces;
+  min-height: 63px;
+  width: 100%;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+.blog-list-item data {
+  font-size: 14px;
+  width: 100%;
+  text-align: right;
+  margin-top: auto;
 }
